fixed gap for safari

--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -30,10 +30,12 @@
 .accordion {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  column-gap: 32px;
+  row-gap: 32px;
 
   @media (max-width: $breakpoint992) {
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 20px;
   }
 }
 
