--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -47,7 +47,8 @@
 
     @media (max-width: $breakpoint992) {
       flex-direction: column-reverse;
-      gap: 10px;
+      column-gap: 10px;
+      row-gap: 10px;
       padding-top: 128px;
     }
 
@@ -94,10 +95,12 @@
   &__socials {
     display: flex;
     align-items: center;
-    gap: 14px;
+    column-gap: 14px;
+    row-gap: 14px;
 
     @media (max-width: $breakpoint768) {
-      gap: 12px;
+      column-gap: 12px;
+      row-gap: 12px;
     }
   }
 
@@ -131,12 +134,14 @@
   &__nav {
     display: flex;
     align-items: flex-start;
-    gap: 64px;
+    column-gap: 64px;
+    row-gap: 64px;
 
     @media (max-width: $breakpoint768) {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 14px;
+      column-gap: 14px;
+      row-gap: 14px;
     }
 
     @media (max-width: 374px) {
@@ -149,7 +154,8 @@
   &__nav-list {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    column-gap: 16px;
+    row-gap: 16px;
 
     @media (max-width: $breakpoint768) {
       &:last-child {
@@ -227,12 +233,14 @@
 
   &__politicals {
     display: flex;
-    gap: 78px;
+    column-gap: 78px;
+    row-gap: 78px;
     margin-bottom: 28px;
 
     @media (max-width: $breakpoint768) {
       flex-direction: column-reverse;
-      gap: 32px;
+      column-gap: 32px;
+      row-gap: 32px;
       margin-bottom: 32px;
     }
   }
@@ -252,7 +260,8 @@
 
   &__copys {
     display: flex;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 24px;
 
     @media (max-width: $breakpoint768) {
       justify-content: center;
