--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -20,7 +20,8 @@
     position: relative;
     display: flex;
     align-items: center;
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 20px;
     margin-left: auto;
     z-index: 23;
 
@@ -79,10 +80,12 @@
 .menu {
   display: flex;
   align-items: center;
-  gap: 48px;
+  column-gap: 48px;
+  row-gap: 48px;
 
   @media (max-width: $breakpoint1450) {
-    gap: 30px;
+    column-gap: 30px;
+    row-gap: 30px;
   }
 
   // .menu__item
@@ -187,7 +190,8 @@
     left: -21px;
     display: none;
     flex-direction: column;
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 20px;
     padding: 20px;
     border: 1px solid var(--primary);
     border-radius: 14px;
@@ -217,7 +221,8 @@
 .submenu {
   display: flex;
   flex-direction: column;
-  gap: 28px;
+  column-gap: 20px;
+  row-gap: 20px;
   width: 100%;
   margin-bottom: 40px;
 
@@ -296,7 +301,8 @@
       pointer-events: all;
       justify-content: flex-start;
       align-items: flex-start;
-      gap: 28px;
+      column-gap: 28px;
+      row-gap: 28px;
       padding: 30px 15px 20px;
       z-index: 22;
       overflow-y: auto;
