--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -141,7 +141,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  column-gap: 15px;
+  row-gap: 15px;
   max-width: 542px;
   width: 100%;
   margin: 0 auto;
@@ -219,13 +220,15 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 28px;
+  column-gap: 28px;
+  row-gap: 28px;
   align-self: flex-start;
   margin-bottom: 36px;
 
   @media (max-width: $breakpoint768) {
     justify-content: center;
-    gap: 12px;
+    column-gap: 12px;
+    row-gap: 12px;
     margin-bottom: 0;
   }
 
@@ -279,11 +282,13 @@ p.sign-form__top-text {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  column-gap: 20px;
+  row-gap: 20px;
   margin-bottom: 26px;
 
   @media (max-width: $breakpoint768) {
-    gap: 10px;
+    column-gap: 10px;
+    row-gap: 10px;
     margin-bottom: 15px;
   }
 }
@@ -292,7 +297,8 @@ p.sign-form__top-text {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  column-gap: 8px;
+  row-gap: 8px;
   width: 100%;
   min-height: 46px;
   background-color: #F2F4F8;
@@ -440,7 +446,8 @@ p.sign-form__top-text {
 
 .modal__form-groups {
   display: flex;
-  gap: 15px 20px;
+  column-gap: 20px;
+  row-gap: 15px;
 
   @media (max-width: $breakpoint768) {
     flex-direction: column;
