--- a/src/scss/_reviews.scss
+++ b/src/scss/_reviews.scss
@@ -77,16 +77,19 @@
 
   &__slide-top {
     display: flex;
-    gap: 27px;
+    column-gap: 27px;
+    row-gap: 27px;
     margin-bottom: 26px;
 
     @media (max-width: $breakpoint992) {
-      gap: 20px;
+      column-gap: 20px;
+      row-gap: 20px;
       margin-bottom: 20px;
     }
 
     @media (max-width: $breakpoint768) {
-      gap: 14px;
+      column-gap: 14px;
+      row-gap: 14px;
       margin-bottom: 10px;
     }
   }
@@ -209,14 +212,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 42px;
+    column-gap: 42px;
+    row-gap: 42px;
 
     @media (max-width: $breakpoint992) {
-      gap: 30px;
+      column-gap: 30px;
+      row-gap: 30px;
     }
 
     @media (max-width: $breakpoint768) {
-      gap: 20px;
+      column-gap: 20px;
+      row-gap: 20px;
     }
   }
 
